--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 
 	// mysql
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'com.mysql:mysql-connector-j'
 
 	// spring security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
