--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -80,8 +80,8 @@ jobs:
       # CodeDeploy 배포
       - name: Deploy with AWS CodeDeploy
         run: >
-          aws deploy create-deployment \
-            --application-name ${{ secrets.CODE_DEPLOY_APP }} \
-            --deployment-config-name CodeDeployDefault.AllAtOnce \
-            --deployment-group-name ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP }} \
+          aws deploy create-deployment 
+            --application-name ${{ secrets.CODE_DEPLOY_APP }} 
+            --deployment-config-name CodeDeployDefault.AllAtOnce 
+            --deployment-group-name ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP }} 
             --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=deploy/$PROJECT_NAME.zip
