--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,8 +62,7 @@ jobs:
 
      - name: Deploy with AWS CodeDeploy
        run: >
-         aws deploy create-deployment 
-           --application-name ${{ secrets.CODE_DEPLOY_APP }} 
-           --deployment-config-name CodeDeployDefault.AllAtOnce 
-           --deployment-group-name ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP }} 
-           --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=deploy/$PROJECT_NAME.zip
+         aws deploy create-deployment --application-name ${{ secrets.CODE_DEPLOY_APP }} 
+         --deployment-config-name CodeDeployDefault.AllAtOnce 
+         --deployment-group-name ${{ secrets.CODE_DEPLOY_DEPLOYMENT_GROUP }} 
+         --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=deploy/$PROJECT_NAME.zip
