--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -64,6 +64,19 @@ jobs:
      - name: Make zip file
        run: zip -r ./$PROJECT_NAME.zip .
        shell: bash
+
+     - name: Log in to Docker Hub
+       uses: docker/login-action@v3
+       with:
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
+
+     - name: Build and push Docker image
+       uses: docker/build-push-action@v4
+       with:
+         context: .
+         push: true
+         tags: ${{ secrets.DOCKER_REPO }}/turtle-playground-spring-boot-app
      
      - name: Configure AWS credentials
        uses: aws-actions/configure-aws-credentials@v1
